fix: content layout shift and remove extra fonts

--- a/site/src/styles/starlight.css
+++ b/site/src/styles/starlight.css
@@ -8,11 +8,13 @@
   --sl-color-text-accent: #04acd2;
   --sl-color-bg: #f9f9f9;
   --anchor-icon-filter: invert(0);
+  --nav-selected-color: #003845;
 }
 
 :root[data-theme="dark"] {
   --logo-text-color: #f9f9f9f9;
   --anchor-icon-filter: invert(1);
+  --nav-selected-color: #374151;
 }
 
 h1 a,
@@ -57,13 +59,14 @@ h5 > a:hover::after {
 }
 
 li a[aria-current="page"] {
-  color: var(--dark-blue);
+  color: var(--nav-selected-color);
 }
 
 a[aria-current="true"]
-  span[data-astro-source-file$="/starlight/components/TableOfContents/TableOfContentsList.astro"] {
-  color: var(--dark-blue);
+  span[data-astro-source-file$="/starlight/components/TableOfContents/SidebarSublist.astro"] {
+  color: var(--nav-selected-color);
 }
+
 .site-title span {
   color: var(--logo-text-color);
 }
@@ -86,4 +89,8 @@ a[aria-current="true"]
 
 h1 > a {
   font-size: 2.5rem;
+}
+
+figure figcaption span {
+  letter-spacing: 0.02em !important;
 }
